fix: filter dropdown alignment in org-chart-rboot v3  (#562)
fix: filter dropdown alignment in org-chart-rboot v3

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -703,7 +703,7 @@
     }
 }
 
-.subsidiary-chart.boc-light{
+.subsidiary-chart.boc-light,.org-chart-reboot.boc-light{
     overflow: visible !important;
     --bs-bg-opacity: 0 !important;
     .boc-filter{
@@ -767,6 +767,16 @@
             }
             @media (min-width:1920px) {
                 left: 0.95%;
+            }
+        }
+        div[data-filter-menu="Entity_Name"]{
+            top: 97%;
+            left: 21%;
+            @media (min-width:1440px) {
+                left: 20.7%;
+            }
+            @media (min-width:1920px) {
+                left: 20.4%;
             }
         }
         div[data-filter-menu="Entity_Type"]{
@@ -976,8 +986,7 @@
 //     left: 70%;
 // }
 
-/* Tooltip */
-
+/* Tooltip on entity hover*/
 .tooltip-entity-content {
     z-index: 9999;
     width: 200px;
